--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs: #Trabalhos a serem executados
               uses: actions/checkout@v4 #Action escolhida para clonar o repositório
 
             - name: Set up JDK 17 #Nome do passo, nesse caso configurar o JDK 17
-              uses: actions/setup-java@1 #Action escolhida para configurar o JDK 17
+              uses: actions/setup-java@v1 #Action escolhida para configurar o JDK 17
               with: #Configurações da action
                   distribution: 'temurin' #Distribuição do JDK
                   java-version: '17' #Versão do JDK
