--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: Exemplo de CI #nome da ação
 
 on:
-    push: #evento que irá disparar a ação
-        branches: [main] #Branch que irá disparar a ação
+  pull_request:
+    branches:
+      - main
+      - develop
+    types: [opened, reopened]
 
 jobs: #Trabalhos a serem executados
     build: #Nome do trabalho pode ser qualquer um de sua escolha
