--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,33 +8,57 @@ on:
     types: [opened, reopened]
 
 jobs: #Trabalhos a serem executados
-    build: #Nome do trabalho pode ser qualquer um de sua escolha
-        runs-on: ubuntu-latest #Sistema operacional a ser utilizado
-        steps: #Passos a serem executados
-            - name: Checkout #Nome do passo, nesse caso clonar o repositório
-              uses: actions/checkout@v4 #Action escolhida para clonar o repositório
+  build: #Nome do trabalho pode ser qualquer um de sua escolha
+    runs-on: ubuntu-latest #Sistema operacional a ser utilizado
+    steps: #Passos a serem executados
+      - name: Checkout #Nome do passo, nesse caso clonar o repositório
+        uses: actions/checkout@v4 #Action escolhida para clonar o repositório
 
-            - name: Set up JDK 17 #Nome do passo, nesse caso configurar o JDK 17
-              uses: actions/setup-java@v1 #Action escolhida para configurar o JDK 17
-              with: #Configurações da action
-                  distribution: 'temurin' #Distribuição do JDK
-                  java-version: '17' #Versão do JDK
+      - name: Set up JDK 17 #Nome do passo, nesse caso configurar o JDK 17
+        uses: actions/setup-java@v1 #Action escolhida para configurar o JDK 17
+        with: #Configurações da action
+          distribution: 'temurin' #Distribuição do JDK
+          java-version: '17' #Versão do JDK
 
-            - name: Build with Maven #Nome do passo, nesse caso buildar com Maven
-              run: mvn -B package -DskipTests #Comando a ser executado
+      - name: Build with Maven #Nome do passo, nesse caso buildar com Maven
+        run: mvn -B package -DskipTests #Comando a ser executado
 
-    test:
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Set up JDK 17
-          uses: actions/setup-java@v1
-          with:
-              distribution: 'temurin'
-              java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-        - name: Test with Maven
-          run: mvn test
+      - name: Test with Maven
+        run: mvn test
+
+  docker:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - test
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-actions@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: seninha/exemplo-ci:latest
