--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Exemplo de CI #nome da ação
+name: Exemplo de CI # Nome da ação
 
 on:
   pull_request:
@@ -7,21 +7,21 @@ on:
       - develop
     types: [opened, reopened]
 
-jobs: #Trabalhos a serem executados
-  build: #Nome do trabalho pode ser qualquer um de sua escolha
-    runs-on: ubuntu-latest #Sistema operacional a ser utilizado
-    steps: #Passos a serem executados
-      - name: Checkout #Nome do passo, nesse caso clonar o repositório
-        uses: actions/checkout@v4 #Action escolhida para clonar o repositório
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout # Clonar o repositório
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17 #Nome do passo, nesse caso configurar o JDK 17
-        uses: actions/setup-java@v1 #Action escolhida para configurar o JDK 17
-        with: #Configurações da action
-          distribution: 'temurin' #Distribuição do JDK
-          java-version: '17' #Versão do JDK
+      - name: Set up JDK 17 # Configurar o JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Build with Maven #Nome do passo, nesse caso buildar com Maven
-        run: mvn -B package -DskipTests #Comando a ser executado
+      - name: Build with Maven # Buildar com Maven
+        run: mvn -B package -DskipTests
 
   test:
     runs-on: ubuntu-latest
@@ -45,6 +45,9 @@ jobs: #Trabalhos a serem executados
       - build
       - test
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -58,7 +61,8 @@ jobs: #Trabalhos a serem executados
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           push: true
           tags: seninha/exemplo-ci:latest
+          no-cache: true # Adicionado para evitar cache
