--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: self hosted
+    runs-on: self-hosted
     steps:
       - name: Pull docker image
         run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/exemplo-ci:latest
